--- a/WebApplicationDemo/Views/Home/EmptyIndex.cshtml
+++ b/WebApplicationDemo/Views/Home/EmptyIndex.cshtml
@@ -4,7 +4,7 @@
 <html ng-app="app">
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>דוגמא</title>
+    <title>דוגמא יוסי ניסן</title>
     <script>
         var theRoot = '@*@Url.Content("~/")*@';
     </script>
@@ -13,7 +13,7 @@
     @Scripts.Render("~/site/js")
 </head>
 <body ng-controller="mainCtrl">
-    <div class="container">
+    <div class="container-fluid">
         <ui-view></ui-view>
     </div>
    
