--- a/WebApplicationDemo/Views/Home/Index.cshtml
+++ b/WebApplicationDemo/Views/Home/Index.cshtml
@@ -11,11 +11,11 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li ui-sref-active="active"><a ui-sref="app.example1">Search</a></li>
-                <li ui-sref-active="active"><a ui-sref="app.example2">page 2</a></li>
+                <li ui-sref-active="active" class="active"><a ui-sref="app.example1">משימות</a></li>
+                <li ui-sref-active="active"><a ui-sref="app.example2">single page application</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div><!--/.container-fluid -->
-</nav> 
-<ui-view>
-</ui-view>
+</nav>
+
+<ui-view></ui-view>
